# bgslibrary

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Config.h  Demo.cpp  Demo.py  Demo2.cpp  Demo2.py  FrameProcessor.cpp  FrameProcessor.h  IFrameProcessor.h  LICENSE  LICENSE.txt  MANIFEST.in  Main.cpp  PreProcessor.cpp  PreProcessor.h  README.md  README_CMAKE_USERS.txt  README_LINUX_USERS.txt  README_VISUAL_STUDIO_USERS.txt  VideoAnalysis.cpp  VideoAnalysis.h  VideoCapture.cpp  VideoCapture.h  bgslibrary_vs2010_opencv.txt  demo.py  demo2.py  run_camera.bat  run_camera.sh  run_demo.bat  run_demo.sh  run_demo2.bat  run_demo2.sh  run_video.bat  run_video.sh  setup.py  virtualenv-build-test-publish.sh  virtualenv-install-test.sh  (+1 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  cmake_autobuild_ocv3416.yml  cmake_autobuild_ocv460.yml  cmake_autobuild_ubuntu_ocv3416.yml  cmake_autobuild_ubuntu_ocv347.yml  cmake_autobuild_ubuntu_ocv460.yml  cmake_manualbuild_ocv3416.yml  cmake_manualbuild_ocv347.yml  cmake_manualbuild_ocv460.yml  cmake_manualbuild_ubuntu_ocv3416.yml  cmake_manualbuild_ubuntu_ocv347.yml  cmake_manualbuild_ubuntu_ocv460.yml  codeql-analysis.yml  docker-image_manualbuild_ocv3416.yml  docker-image_manualbuild_ocv347.yml  docker-image_manualbuild_ocv460.yml
bgslibrary/: FrameProcessor.cpp  FrameProcessor.h  VideoAnalysis.cpp  VideoCapture.cpp
bgslibrary/algorithms/: AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  AdaptiveSelectiveBackgroundLearning.h  CodeBook.h  DPAdaptiveMedian.h  DPEigenbackground.h  DPMean.cpp  DPMean.h  DPPratiMediod.cpp  DPWrenGA.cpp  DPZivkovicAGMM.cpp  DPZivkovicAGMM.h  FuzzyChoquetIntegral.cpp  FuzzyChoquetIntegral.h  FuzzySugenoIntegral.cpp  FuzzySugenoIntegral.h  GMG.cpp  IBGS.h  IndependentMultimodal.cpp  IndependentMultimodal.h  KDE.cpp  KDE.h  KNN.cpp  LBAdaptiveSOM.cpp  LBAdaptiveSOM.h  LBFuzzyAdaptiveSOM.cpp  LBFuzzyAdaptiveSOM.h  LBFuzzyGaussian.cpp  LBFuzzyGaussian.h  LBMixtureOfGaussians.cpp  LBMixtureOfGaussians.h  LBP_MRF.h  LBSimpleGaussian.cpp  LBSimpleGaussian.h  LOBSTER.cpp  MixtureOfGaussianV1.h  MultiCue.cpp  MultiCue.h  MultiLayer.cpp  PAWCS.cpp  (+12 more)
bgslibrary/tools/: ForegroundMaskAnalysis.cpp  ForegroundMaskAnalysis.h  FuzzyUtils.cpp  FuzzyUtils.h  PerformanceUtils.h  PixelUtils.cpp
cmake-modules/: BGSLibraryConfig.cmake.in  FindOpenCV.cmake
config/: FrameDifferenceBGS.xml  FrameProcessor.xml  MultiCue.xml  VideoCapture.xml
dataset/: demo.avi  video.avi  video02.avi  video03.avi
demos/: DemoFrameDifferenceBGS.cpp  DemoMultiLayerBGS.cpp
demos/linux_ubuntu/: CMakeLists.txt
dockerfiles/opencv_3.4.16py38/: Dockerfile
dockerfiles/opencv_3.4.7py38/: Dockerfile
dockerfiles/opencv_4.6.0py38/: Dockerfile
docs/: README_CMAKE_USERS_OPENCV2.txt  README_CMAKE_USERS_OPENCV3.txt  README_LINUX_USERS.txt  README_VS2010_OPENCV2.txt
example_linux/: CMakeLists.txt  FrameDifferenceTest.cpp
example_linux/config/: KEEP_THIS_FOLDER
example_macosx/: CMakeLists.txt
examples/: CMakeLists.txt  Demo.cpp  Demo2.cpp  README.md  run_demo.bat  run_demo.sh  run_demo2.bat  run_demo2.sh
examples/linux_ubuntu/: .gitignore  FrameDifferenceTest.cpp  README.txt
examples/macosx/: CMakeLists.txt  FrameDifferenceTest.cpp
fet/: README.txt  fet.py
gui/: README.md
gui/java/: README.txt  run_java_gui_with_console.bat
gui/mfc/: .gitignore
gui/qt/: CMakeLists.txt  (+12 more)
gui_java/: run_camera.bat  run_video.bat
gui_qt/: .gitignore  CMakeLists.txt  application.qrc  bgslibrary_gui.cpp  bgslibrary_gui.pro  mainwindow.cpp  mainwindow.ui
help/: algorithms_comparison.md  algorithms_concepts.md  algorithms_math_spec.md  algorithms_selection_guide.md  algorithms_taxonomy.md
java_gui/: bgslibrary_gui.properties  build.xml  run_java_gui.bat
package_analysis/: ForegroundMaskAnalysis.cpp  ForegroundMaskAnalysis.h  PerformanceUtils.cpp  PerformanceUtils.h  PixelUtils.cpp  PixelUtils.h
package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  AdaptiveSelectiveBackgroundLearning.cpp  AdaptiveSelectiveBackgroundLearning.h  CodeBook.cpp  CodeBook.h  DPAdaptiveMedian.cpp  DPAdaptiveMedian.h  DPEigenbackground.cpp  DPEigenbackground.h  DPGrimsonGMM.cpp  DPGrimsonGMM.h  DPMean.cpp  DPMean.h  DPPratiMediod.cpp  DPPratiMediod.h  DPTexture.cpp  DPTexture.h  DPWrenGA.cpp  DPWrenGA.h  DPZivkovicAGMM.cpp  DPZivkovicAGMM.h  FrameDifference.cpp  FrameDifference.h  FrameDifferenceBGS.cpp  FrameDifferenceBGS.h  FuzzyChoquetIntegral.cpp  FuzzyChoquetIntegral.h  FuzzySugenoIntegral.cpp  FuzzySugenoIntegral.h  GMG.cpp  GMG.h  IBGS.h  IndependentMultimodal.cpp  IndependentMultimodal.h  KDE.cpp  KDE.h  KNN.cpp  KNN.h  KNNBGS.cpp  (+63 more)
src/: Demo.cpp  FrameProcessor.cpp  FrameProcessor.h  IFrameProcessor.h  Main.cpp  PreProcessor.cpp  PreProcessor.h  VideoAnalysis.cpp  VideoAnalysis.h  VideoCapture.cpp  VideoCapture.h
vs2010/: .gitignore  README.txt  bgslibrary.sln  bgslibrary.vcxproj  bgslibrary.vcxproj.filters  bgslibrary_demo.vcxproj  bgslibrary_demo.vcxproj.filters  bgslibrary_demo2.vcxproj  bgslibrary_demo2.vcxproj.filters
vs2010mfc/: Dlg.cpp  bgslibrary_vs2010_mfc.aps  bgslibrary_vs2010_mfc.rc  bgslibrary_vs2010_mfc.sln  bgslibrary_vs2010_mfc.vcxproj  bgslibrary_vs2010_mfc.vcxproj.filters  stdafx.cpp  stdafx.h
vs2013/: .gitignore  README.txt  bgslibrary.sln  bgslibrary.vcxproj  bgslibrary.vcxproj.filters  bgslibrary_demo.vcxproj  bgslibrary_demo.vcxproj.filters  bgslibrary_demo2.vcxproj  bgslibrary_demo2.vcxproj.filters
wrapper/java/: CMakeLists.txt  README.md  bgslibrary_java_module.cpp  bgslibrary_java_module.hpp
wrapper/java/libs/: README.md
wrapper/java/src/: bgslibrary_BgsLib.h
wrapper/java/src/bgslibrary/: BgsLib.java  ImagePanel.java  Main.java  Utils.java
wrapper_java/: .gitignore  bgslibrary_java_module.cpp  bgslibrary_java_module.hpp
wrapper_matlab/: .gitignore  README.txt  backgroundSubtractor_wrapper.cpp  compile.m  mxarray.h  run_demo.m
wrapper_python/: bgslibrary_module.cpp  ndarray_converter.h  np_opencv_converter.cpp  np_opencv_converter.h
(+730 files in other folders)
